debezium/dbz#2314 Fix CDI duplicates
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>